--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "eat-da-pizza",
+  "name": "eat-da-burger",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/christinenia/Eat-Da-Pizza.git"
+    "url": "git+https://github.com/christinenia/Eat-Da-Burger.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/christinenia/Eat-Da-Pizza/issues"
+    "url": "https://github.com/christinenia/Eat-Da-Burger/issues"
   },
-  "homepage": "https://github.com/christinenia/Eat-Da-Pizza#readme",
+  "homepage": "https://github.com/christinenia/Eat-Da-Burger#readme",
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
     "mysql": "^2.16.0"
-  }
+  },
+  "devDependencies": {}
 }
