--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "method": "^2.0.0",
     "mysql": "^2.16.0",
     "path": "^0.12.7"
   }
