--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "method": "^2.0.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0",
     "path": "^0.12.7"
   }
